--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,14 +4,25 @@
 
 }
 
+.item__link:hover {
+  background-color: #00579b;
+  color: white;
+}
+
+.item__link_active {
+  background-color: dimgrey;
+  color: black;
+}
+
 a {
   text-decoration: none;
   color: dimgrey;
 }
 
 a:hover {
-  color: black;
+  color: white;
 }
+
 
 .links {
   margin: 0;
