get data from server vs axsios lesson 51

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -8,6 +8,11 @@
 
 }
 
+.block:hover {
+  border: 2px solid #00819b;
+  background-color: #dfecf4;
+}
+
 .block__logo {
   display: flex;
   flex-direction: column;
