--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,12 @@
   background-color: #00579b;
 }
 
-.header img {
-  width: 100px;
+.header__img {
+  width: 60px;
+  height: 60px;
+  background-image: url("./assets/img.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
